--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "mocha test/products.test.js"
+    "test": "mocha test/products.test.js",
+    "build": "npm install"
   },
   "repository": {
     "type": "git",
