--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "productos.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
-    "test": "mocha test/products.test.js",
-    "build": "npm install"
+    "start": "node ./src/server.js --mode production",
+    "dev": "nodemon ./src/server.js --mode development",
+    "test": "mocha test/products.test.js"
   },
   "repository": {
     "type": "git",
