--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "productos.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
+    "start": "node ./src/server.js --mode production",
+    "dev": "nodemon ./src/server.js --mode development",
     "test": "mocha test/products.test.js"
   },
   "repository": {
